src/objects/Co_op_Allocation_Transfer__c.object
<CustomObject>
    <fields>
        <fullName>Co_op_Allocation_Transferred_Amount__c</fullName>
        <label>Co-op Allocation Transferred Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason for Transfer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Transfer_From_Co_op__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer From</label>
        <referenceTo>Co_Op_Allocation__c</referenceTo>
        <relationshipLabel>Co-op Allocation Transfers -Transfer From</relationshipLabel>
        <relationshipName>PRM_Junctions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_To_Co_op__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Co_Op_Allocation__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Co_Op_Allocation__c</referenceTo>
        <relationshipLabel>Co-op Allocation Transfers - Transfer To</relationshipLabel>
        <relationshipName>PRM_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Co-op Allocation Transfer</label>
    <nameField>
        <displayFormat>Junc-{00000000}</displayFormat>
        <label>PRM Junction Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Co-op Allocation Transfers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Transfer_amount_can_not_exceed_balance</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISNEW(),
Co_op_Allocation_Transferred_Amount__c &gt;  Transfer_From_Co_op__r.Allocation_Period_Balance__c 
)</errorConditionFormula>
        <errorMessage>You do not have sufficient balance to transfer the amount. Please check Co-op Allocation &quot;Allocation Period Balance&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Transfer_should_be_only_in_same_period</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISNEW(),
OR(
(TEXT(Transfer_From_Co_op__r.Allocation_Month__c) !=  TEXT(Transfer_To_Co_op__r.Allocation_Month__c)),
(TEXT(Transfer_From_Co_op__r.Allocation_Year__c) !=  TEXT(Transfer_To_Co_op__r.Allocation_Year__c))
)
)</errorConditionFormula>
        <errorMessage>Transfers can only come out of and into the same allocation period. Please select same Period in Transfer To and Transfer From.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_same_allocation_of_transfe</fullName>
        <active>true</active>
        <errorConditionFormula>Transfer_From_Co_op__r.Name  =  Transfer_To_Co_op__r.Name</errorConditionFormula>
        <errorMessage>Please choose different allocations. Transfer in and Transfer out allocations can not be same</errorMessage>
    </validationRules>
</CustomObject>