src/objects/Co_op_Allocation_Transfer__c/validationRules/PRM_BG_Amount_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>PRM_BG_Amount_Check</fullName>
    <active>true</active>
    <description>SFPRM-453</description>
    <errorConditionFormula>AND(
    ISNEW(),
				OR(
        PRM_A_A_Vital_Amount__c &gt; Transfer_From_Co_op__r.A_A_VITAL_Allocation__c,
  				  PRM_FN_Amount__c &gt; Transfer_From_Co_op__r.FN_Allocation__c,
        PRM_ION_Amount__c &gt; Transfer_From_Co_op__r.ION_Allocation__c,
        PRM_ION_NUAGE_Amount__c &gt; Transfer_From_Co_op__r.ION_NUAGE_Allocation__c, 
								PRM_ION_OPTICS_Amount__c &gt; Transfer_From_Co_op__r.ION_OPTICS_Allocation__c,
        PRM_ION_Routing_Amount__c &gt; Transfer_From_Co_op__r.ION_Routing_Allocation__c,
        PRM_MN_Amount__c &gt; Transfer_From_Co_op__r.MN_Allocation__c
							),
		OR(
		  NOT(CONTAINS(Description__c, &apos;Automated Transfer&apos;)),
		  ISBLANK(Description__c))
)</errorConditionFormula>
    <errorMessage>You can&apos;t transfer more than what is available in the Allocation for each BG.</errorMessage>
</ValidationRule>