src/objects/Co_op_Allocation_Transfer__c/validationRules/PRM_BG_Amount_Sum.validationRule-meta.xml
<ValidationRule>
    <fullName>PRM_BG_Amount_Sum</fullName>
    <active>true</active>
    <description>SFPRM-453</description>
    <errorConditionFormula>AND(
				Co_op_Allocation_Transferred_Amount__c != 
   	( PRM_A_A_Vital_Amount__c + PRM_FN_Amount__c + PRM_ION_Amount__c +
		  PRM_ION_NUAGE_Amount__c + PRM_ION_OPTICS_Amount__c +
	  	PRM_ION_Routing_Amount__c + PRM_MN_Amount__c ),
		  NOT(CONTAINS(Description__c, &apos;Automated Transfer&apos;))
)</errorConditionFormula>
    <errorDisplayField>Co_op_Allocation_Transferred_Amount__c</errorDisplayField>
    <errorMessage>Transferred Amount must equal the sum of BG Amounts.</errorMessage>
</ValidationRule>