src/objects/Co_op_Allocation_Transfer__c/validationRules/Transfer_amount_can_not_exceed_balance.validationRule-meta.xml
<ValidationRule>
    <fullName>Transfer_amount_can_not_exceed_balance</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    Co_op_Allocation_Transferred_Amount__c &gt;  Transfer_From_Co_op__r.Allocation_Period_Balance__c,
		  NOT(CONTAINS(Description__c, &apos;Automated Transfer&apos;))
)</errorConditionFormula>
    <errorMessage>You do not have sufficient balance to transfer the amount. Please check Co-op Allocation &quot;Allocation Period Balance&quot;.</errorMessage>
</ValidationRule>