src/objects/Co_op_Allocation_Transfer__c/validationRules/Transfer_should_be_only_in_same_period.validationRule-meta.xml
<ValidationRule>
    <fullName>Transfer_should_be_only_in_same_period</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISNEW(),
OR(
(TEXT(Transfer_From_Co_op__r.Allocation_Month__c) !=  TEXT(Transfer_To_Co_op__r.Allocation_Month__c)),
(TEXT(Transfer_From_Co_op__r.Allocation_Year__c) !=  TEXT(Transfer_To_Co_op__r.Allocation_Year__c))
)
)</errorConditionFormula>
    <errorMessage>Transfers can only come out of and into the same allocation period. Please select same Period in Transfer To and Transfer From.</errorMessage>
</ValidationRule>